--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,11 @@
 <!--banner-->
 <div class="container-fluid">
 <div class="form-main-bg">
+  <div class="card p-a-2">
   <form (ngSubmit)="onLogin(f)" #f="ngForm" class="form-horizontal form-label-left parsleyjs" method="post"
               data-parsley-priority-enabled="false"
               novalidate="novalidate">
-     <div class="col-md-4 offset-md-4 form-bg">
+     <div class="card p-a-2">
        <h4 class="form-heading">Login</h4>
        <!--user name-->
        <div class="form-group row">
@@ -33,6 +34,7 @@
      </div><!--col-->
      <!--sign up -->
  </form>
+ </div>
  </div>
  
 <!--background-->
